# tracing-error-example

./: Cargo.toml
src/: main.rs
tac/: Cargo.toml
tac/src/: lib.rs
