[package]
name = "tracing-error-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tac = { version = "0.1.0", path = "tac" }
tracing = "0.1.40"
tracing-error = "0.2.0"
# tracing = { git = "https://github.com/tokio-rs/tracing", version = "0.2.0" }
# tracing-error = { git = "https://github.com/tokio-rs/tracing", version = "0.2.0" }
# tracing-subscriber = { git = "https://github.com/tokio-rs/tracing" }
tracing-subscriber = "0.3.18"

[workspace]
resolver = "2"
members = [
  "tac",
]
